examples/scenarios/21-var-redeclaration-edge-cases/error-const-const.mncnk
chunk "Main" {
  const a: int = 1;
  const a: int = 2; // error: redeclaration in the same scope
};
moon(Main);
